--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
   "dependencies": {
     "ampersand-collection": "^1.3.17",
-    "ampersand-model": "^4.0.3"
+    "ampersand-state": "^4.4.4",
   }
 }
